# pier

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: demo.tape
src/: config.rs  lib.rs  main.rs  paths.rs  registry.rs  shell.rs  ui.rs
src/commands/: init.rs  list.rs  mod.rs  register.rs  remove.rs  switch.rs
tests/: config.rs  registry.rs
